# neat-test-suite

./: .gitignore  CMakeLists.txt  README.md
bachelor-thesis/: thesis.tex
bachelor-thesis/first-neat-program/: client_send_10Mb.c  server_send_10Mb.c
bachelor-thesis/neat/: CMakeLists.txt  common.c  json_overhead.c  json_overhead.h  neat_core.c  neat_pm_socket.c  sample_data.c  sample_data.h
bachelor-thesis/replicate-graphs/: add_jsondata.sh  callgrind.out.8174  callgrind.out.8206  plot_graph.plt  plot_graph_compare.plt  plot_graph_json.plt  script.sh  script_b.sh  script_cluster.sh  script_cluster_json.sh
bachelor-thesis/replicate-graphs/graphs/: cpu_graph_compare_connection_cluster  cpu_graph_compare_connection_json  cpu_graph_compare_connection_json_testbed  cpu_graph_compare_connection_sampling_json  cpu_graph_compare_connection_testbed  cpu_graph_compare_jsondumps  cpu_graph_compare_jsonloads  cpu_graph_compare_jsonloads_testbed  cpu_graph_compare_jsonobjectset  cpu_graph_compare_jsonpack  cpu_graph_json_cluster  cpu_graph_jsondumps  memory_graph_compare_connection  memory_graph_compare_connection_cluster  memory_graph_compare_connection_json  memory_graph_compare_connection_json_testbed  memory_graph_compare_jsondumps  memory_graph_compare_jsonloads  memory_graph_compare_jsonloads_testbed  memory_graph_compare_jsonobjectset  memory_graph_compare_jsonpack
bachelor-thesis/replicate-graphs/neat/: CMakeLists.txt  common.h  json_overhead.c  json_overhead.h  json_overhead2.c  neat_core.c  neat_pm_socket.c  sample_cpu.c  sample_cpu.h  util_new.c  util_new.h
include/: client_common.h  common.h  http_common.h  server_common.h  socket_common.h
scripts/: calculate_diffs.sh  calculate_diffs_add_jsondata.sh  calculate_diffs_all.sh  calculate_diffs_transfer.sh  convert_to_gnuplot.R  parse_all.sh  parse_results.sh  plot_graph.plt  plot_graph_compare.plt  plot_graph_transfer.plt  produce_graph.sh  produce_graph_transfer.sh  produce_graphs_all.sh  produce_graphs_cluster.sh  script_cluster.sh  script_localhost.sh  vmstat_m_list  vmstat_z_list
src/: client_common.c  common.c  http_common.c  kqueue_client.c  kqueue_server.c  libuv_client.c  libuv_server.c  neat_client.c  neat_server.c  server_common.c  socket_common.c  util_new.c
teacup-code/: README-CUSTOM.txt  analyse.py  experiment.py  hostsetup.py  loggers.py  runbg.py  runbg_wrapper.sh  sanitychecks.py  trafficgens.py
teacup-configs/kqueue/connection/sctp/: config.py
(+610 files in other folders)
